Fix GitHub icon visibility in dark mode

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -229,6 +229,12 @@ html.dark-mode {
   .navicon::after {
     background: #e0e0e0;
   }
+
+  .fa-github,
+  .fa-github-alt,
+  .fa-github-square {
+    color: #e0e0e0;
+  }
 }
 
 
